Allow multiple water sources selection
